--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>DronoCargo</title>
   </head>
   <body class="bg-white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
